# Rower

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
benches/: decoder.rs  registry.rs  varint.rs  varint21.rs  varint_len.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: component.rs  config.rs  error.rs  handlers.rs  main.rs  online.rs  protocol.rs
src/protocol/: buffer.rs  client.rs  codec.rs  connection.rs  nbt.rs  packet.rs  util.rs  wrappers.rs
src/protocol/codec/: cipher.rs  compression_codec.rs  connection.rs  decoder.rs  encoder.rs  error.rs  experiment.rs  legacy_status.rs  minecraft_codec.rs  reg.rs  registry.rs  util.rs
src/protocol/packet/: handshake.rs  login.rs  play.rs  status.rs
