[package]
name = "rower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
simple_logger = "4.2.0"
tokio = { version = "1.32.0", features = ["rt", "net", "macros", "io-util", "parking_lot"] }
tokio-util = { version = "0.7.9", features = ["codec", "io"] }
futures = "0.3.28"
bytes = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.3.0"
uuid = { version = "1.4.1", features = ["v3", "serde"] }
libdeflater = "1.19.0"
once_cell = "1.18.0"
base64 = "0.21.4"
image = "0.24.7"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
md-5 = "0.10.6"
envy = "0.4.2"
thiserror = "1.0.48"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "varint"
harness = false

[[bench]]
name = "varint_len"
harness = false

[[bench]]
name = "varint21"
harness = false

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "registry"
harness = false
