[package]
name = "rower"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
log = "0.4.21"
simple_logger = "4.3.3"
tokio = { version = "1.37", features = [
  "rt",
  "net",
  "macros",
  "io-util",
  "parking_lot",
] }
tokio-util = { version = "0.7.10", features = ["codec", "io"] }
futures = { version = "0.3.30", features = ["std"], default-features = false }
bytes = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v3", "serde"] }
libdeflater = "1.20.0"
base64 = "0.22.0"
image = { version = "0.25", features = ["png"], default-features = false }
strum = { version = "0.26.1", features = ["derive"] }
md-5 = "0.10.6"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8.12"
openssl = "0.10"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8.5"
sha1 = "0.10.6"
num-bigint = "0.4.4"
macros = { path = "macros" }

[workspace]
members = ["macros"]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "varint"
harness = false

[[bench]]
name = "varint_len"
harness = false

[[bench]]
name = "varint21"
harness = false

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "registry"
harness = false
